package org.example.classes;

public class CompteCourant extends Compte {
    @Override
    public boolean retirer() {
        return false;
    }
}
