package org.example.classes;

public class CompteEpargne extends Compte{
    @Override
    public boolean retirer() {
        return false;
    }
}
